# silo-backend

./: .env.example  .gitignore  postman_collection.json  pyproject.toml  test_ws.py
.github/workflows/: deploy.yml
apps/calls/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/calls/migrations/: 0001_initial.py
apps/chats/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/chats/migrations/: 0001_initial.py
apps/users/: admin.py  authentication.py  consumers.py  models.py  routing.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_emailverificationtoken_passwordresettoken.py  0003_customuser_is_verified.py
apps/workspaces/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/workspaces/migrations/: 0001_initial.py
config/: asgi.py  celery.py  urls.py
config/settings/: base.py  development.py  production.py
docs/: analysis_results.md  database_schema.md
infra/: email.py
utils/: exceptions.py  renderers.py
