[project]
name = "silo-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "channels>=4.3.2",
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.14.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "google-auth>=2.55.1",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=7.0.0",
    "django-silk>=5.5.0",
    "drf-spectacular>=0.29.0",
]
prod = [
    "gunicorn>=26.0.0",
]
